@@ -3,7 +3,6 @@ depends:
     ir
     res
 xml:
-    import_data.xml
     sequence.xml
     workflow.xml
     wizard.xml
